--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <span><b>FREE WORLDWIDE SHIPPING</b> ON ALL ORDERSABOVE $100</span>
       <span><b>EXTENDED RETURN </b>UNTIL 10TH NOVEMBER</span>
     </header>
-    <main class="container">
-      <section class="hero-1">
+    <main >
+      <section class="hero-1 container">
         <div class="grid-1">
           <img src="/images/demo31-4.png" alt="" />
           <h3>shop the valentines</h3>
@@ -53,7 +53,7 @@
           <h3>shop dresses</h3>
         </div>
       </section>
-      <section class="hero-2">
+      <section class="hero-2 container">
         <div class="headings-2">
           <h2>BEST SELLING</h2>
           <p>BEST SELLING ITEM OF THIS MONTH</p>
@@ -135,7 +135,7 @@
           <button>shop now</button>
         </div>
       </section>
-      <section class="hero-3">
+      <section class="hero-3 ">
         <div class="grid-3 box1">
           <div class="box1-dtls">
             <h3>THIS WEEK’S HIGHLIGHTS</h3>
@@ -175,7 +175,7 @@
           <button class="btn-3">kids</button>
         </div>
       </section>
-      <section class="hero-4">
+      <section class="hero-4 ">
         <div class="headings-2">
           <h2>as seen in</h2>
           <div class="logos">
@@ -188,7 +188,7 @@
           </div>
         </div>
       </section>
-      <section class="hero-5">
+      <section class="hero-5 container">
         <div class="headings-2">
           <h2>FRESH FROM OUR BLOG</h2>
           <p>You are going to love this amazing shopify theme.</p>
